<resources>
    <string name="app_name">Films</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="save">Save</string>
    <string name="list">List films</string>
    <string name="add">Add film</string>
    <string name="description">Description</string>
    <string name="genres">List genres</string>
    <string name="add_genre">Add genre</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>