<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/title" />

    <EditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/description"/>

    <EditText
            android:id="@+id/editYear"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/genre"/>

    <Spinner
            android:id="@+id/spinnerGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:layout_marginTop="20sp"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

</LinearLayout>